# metasploit-ui

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md
src/: app.rs  main.rs  tabs.rs
src/components/: input.rs  list.rs  mod.rs  status_bar.rs  tab_bar.rs
src/msf/: mod.rs  msfconsole.rs  msfvenom.rs  parser.rs  runner.rs
src/ui/: console_tab.rs  dashboard.rs  explorer.rs  mod.rs  payload_gen.rs  resources.rs  sessions.rs
